# workflow_test

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  check_meta.sh  default_cfg.yaml  packaging.sh  pytest.ini  requirements.txt  ruff.toml  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pr-title-checker-config.json  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: badge_updater.yml  build.yml  compatibility_test.yml  minimal_test.yml  pr_autolabel.yml  publish_release.yml  test.yml
docs/: README.md
examples/: demo.ipynb
misc/: check_meta.sh  packaging.sh
package-name/: __init__.py
tests/: README.md  test_config.py  test_core.py  test_dfstask.py  test_display.py  test_engine.py  test_stat_numeric.py  test_statistic.py  test_unit.py  test_utils.py
torchmeter/: __cli__.py  __init__.py  _stat_numeric.py  config.py  core.py  display.py  engine.py  statistic.py  unit.py  utils.py
